fix: improve citation format spacing. Signed-off-by: Syed Ishmum Ahnaf syedishmum15@gmail.com

--- a/sass/_citation.scss
+++ b/sass/_citation.scss
@@ -81,7 +81,7 @@
 
 .cite-formats {
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
     margin-top: 1rem;
 }
 
